city + street + house_number, refactoring

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -13,6 +13,9 @@
 		"accept_conditions": "Souhlasím s podmínkama",
 		"bid": "Přihodit",
 		"want_bid": "Chcete přihodit?",
+		"auction_complete": "Konec aukce",
+		"auction_win": "Vyhrál jste",
+		"auction_lose": "Nevyhrál jste",
 		"driver_assign": "Přiřadit řidiče",
 		"assign": "Přiřadit",
 		"login_to_system": "Přihlášení do systému",
@@ -36,7 +39,7 @@
 		"ico" : "IČO",
 		"dic" : "DIČ",
 		"bank_account" : "Bankovní účet",
-		"address_state" : "Stát",
+		"address_city" : "Město",
 		"address_street" : "Ulice",
 		"address_house_number" : "Číslo popisné",
 		"psc" : "Poštovní číslo",
@@ -132,14 +135,19 @@
 			"unload": "Vyložení",
 			"unload_note": "Poznámka pro naložení nákladu",
 			"freight_description": "Popis zásilky",
-			"freight_type": "Typ zásilky",
+			"freight_type": {
+				"label": "Typ zásilky",
+				"1": "prvni",
+				"2": "druha",
+				"3": "treti"
+			},
 			"freight_size": "Velikost zásilky",
 			"freight_weight": "Váha zásilky",
 			"email_addressee": "Email adresáta",
 			"end_auction": "Konec aukce",
 			"min_amount": "Minimální příhoz",
 			"history_amount": "Historie příhozů",
-			"maturity": "splatnost",
+			"maturity": "Splatnost pracovních dní",
 			"driver": "Řidič",
 			"no_auction": "Žádné dostupné aukce..."
 		}
