--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -13,6 +13,9 @@
 		"accept_conditions": "Accept conditions",
 		"bid": "Bid",
 		"want_bid": "Want bid?",
+		"auction_complete": "End of auction",
+		"auction_win": "You win",
+		"auction_lose": "You did not win",
 		"driver_assign": "Assign driver",
 		"assign": "Assign",
 		"login_to_system": "Login to system",
@@ -36,7 +39,7 @@
 		"ico" : "Identification number",
 		"dic" : "VAT",
 		"bank_account" : "Bank account",
-		"address_state" : "Country",
+		"address_city" : "City",
 		"address_street" : "Street",
 		"address_house_number" : "House number",
 		"psc" : "ZIP",
@@ -132,14 +135,19 @@
 			"unload": "Unload",
 			"unload_note": "Note for freight unload",
 			"freight_description": "Freight description",
-			"freight_type": "Freight type",
+			"freight_type": {
+				"label": "Freight type",
+				"1": "first",
+				"2": "second",
+				"3": "third"
+			},
 			"freight_size": "Freight size",
 			"freight_weight": "Freight weight",
 			"email_addressee": "Email addressee",
 			"end_auction": "End auction",
 			"min_amount": "Min amount",
 			"history_amount": "History amount",
-			"maturity": "Maturity",
+			"maturity": "Working day maturity",
 			"driver": "Driver",
 			"no_auction": "No auction"
 		}
