lokalizace chyb ze serveru, + loklizovane vsechny hlasky

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -157,12 +157,41 @@
 		"wrong_login" : "Chyba při přihlašování",
 		"wrong_registration": "Chyba při registraci",
 		"select_role": "Vyberte roli",
-		"set_vacation": "Datum dovolené se nepodařilo uložit",
-		"delete_vacation": "Datum dovolené se nepodařilo smazat",
-        "ban_user": "Uživatelovi se nepodařilo změnit stav banu",
-        "delete_user": "Uživatelovi se nepodařilo změnit stav smazání",
-        "verify_user": "Uživatelovi se nepodařilo změnit stav verifikace",
-		"longest_error_35": "XXXXX XXXXX XXXXX XXXXX XXXXX XXXXT"
+		"wrong_address": "Špatně zadaná adresa",
+		"invalid_auction_date": "Datum ukončení aukce musí být vetší jak aktuální datum",
+		"auction_created": "Aukce nebyla založena, zkontrolujte formulář",
+		"set_required_inputs": "Vyplňte všechny povinné položky",
+		"auction_history": "Načítání historie se nezdařilo",
+		"wrong_bid": "Neplatná částka přihození",
+		"codes": {
+			"fatal": "Neznámá chyba serveru, kontaktujte administratora",
+			"0": "Chyba na serveru, prosím kontaktujte administrátora",
+			"1": "Možné hodnoty pro ban uživatele jsou 0 nebo 1",
+			"2": "Možné hodnoty pro verifikaci uživatele jsou 0 nebo 1",
+			"3": "Možné hodnoty pro smazání uživatele jsou 0 nebo 1",
+			"4": "Tato aukce nebyla nalezena",
+			"5": "Aktuálně vyhráváte tuto aukci",
+			"6": "Minimální přihoz je 1 kč",
+			"7": "Nesprávné heslo",
+			"8": "Uživatel nebyl nalezen",
+			"9": "Pouze transporter může mazat svoje řidiče",
+			"10": "Můžete mít na sobě pouze jednu jízdu",
+			"11": "Tato jízda není pod vaší firmou",
+			"12": "Tato jízda již skončila",
+			"13": "Je potřeba minimálně jedna fotka",
+			"14": "Nemůžete začít odstartovanou jízdu",
+			"15": "Můžete ukončit jizdu pouze která právě jede",
+			"16": "Kód pro tuto jízdu nesouhlasí",
+			"17": "Nemáte žádné fotky pro ukončení jízdy",
+			"18": "Nemáte žádné fotky pro tuto jízdu",
+			"19": "Tuto jízdu má jiný řidič",
+			"20": "Tato jízda musí být ve stavu in progress",
+			"21": "Sledování této jízdy nebylo nalezeno v databázi",
+			"22": "Token neexistuje nebo je nevalidní",
+			"23": "Token je nevalidní",
+			"24": "Heslo není správné",
+			"25": "Uživatel již existuje"
+		}
 	},
 	"warnings": {
 	},
@@ -171,8 +200,13 @@
 		"registration": "Registrace proběhla v pořádku",
 		"set_vacation": "Datum dovolené byl uložen",
 		"delete_vacation": "Datum dovolené byl smazán",
-        "ban_user": "Uživatelovi  byl změněn stav banu",
-        "delete_user": "Uživatelovi  byl změněn stav smazání",
-        "verify_user": "Uživatelovi  byl změněn stav verifikace"
+        "ban_user": "Uživatelovi byl změněn stav banu",
+        "delete_user": "Uživatelovi byl změněn stav smazání",
+        "verify_user": "Uživatelovi byl změněn stav verifikace",
+		"resend_password": "Heslo bylo posláno na váš email",
+		"change_password": "Heslo bylo změněno",
+		"auction_created": "Aukce byla úspěšně založena",
+		"driver_deleted": "Řidič byl smazán",
+		"bid_auction": "Přihození úspěšné"
 	}
 }
