--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -157,12 +157,41 @@
 		"wrong_login" : "Login error",
 		"wrong_registration": "Registration error",
 		"select_role": "Select role",
-		"set_vacation": "Date of vacation was not saved",
-		"delete_vacation": "Date of vacation was not deleted",
-        "ban_user": "Error during change ban state",
-        "delete_user": "Error during change delete state",
-        "verify_user": "Error during change verify state",
-		"longest_error_35": "XXXXX XXXXX XXXXX XXXXX XXXXX XXXXT"
+		"wrong_address": "Wrong set address",
+		"invalid_auction_date": "Date of end auction must be greater than currently date",
+		"auction_created": "Auction not created, check form",
+		"set_required_inputs": "Set all required fields",
+		"auction_history": "Load history failed",
+		"wrong_bid": "Wrong bid",
+		"codes": {
+			"fatal": "Unknown error, contact administrator",
+			"0": "Server error, please contact administrator",
+			"1": "Allowed values for ban user are 0 or 1",
+			"2": "Allowed values for verify user are 0 or 1",
+			"3": "Allowed values for delete user are 0 or 1",
+			"4": "This auction not found in database",
+			"5": "Currently you are winning this auction",
+			"6": "Minimum bidding of every auction is 1 kc",
+			"7": "Passwords is not correct",
+			"8": "User not found",
+			"9": "Only transporter can delete drivers",
+			"10": "You can have only one shipment",
+			"11": "This shipment is not for your company",
+			"12": "This shipment is finished",
+			"13": "Minimal photos for shipment is 1",
+			"14": "You cannot start shipment in progress",
+			"15": "You can finish  only shipment in progress",
+			"16": "Code for this shipment is wrong",
+			"17": "No photos at the end of shipment",
+			"18": "No photos for this shipment",
+			"19": "This shipment has another driver",
+			"20": "This shipment must be in progress",
+			"21": "Shipment route for this shipment not exist in database",
+			"22": "Token does not exist or is not valid",
+			"23": "Token is not valid",
+			"24": "Password is incorrect",
+			"25": "Username already exists"
+		}
 	},
 	"warnings": {
 	},
@@ -173,6 +202,11 @@
 		"delete_vacation": "Date of vacation was deleted",
         "ban_user": "Ban state was changed",
         "delete_user": "Delete state was changed",
-        "verify_user": "Verify state was changed"
+        "verify_user": "Verify state was changed",
+		"resend_password": "Password was send to your email",
+		"change_password": "Password was changed",
+		"auction_created": "Auction was successfully created",
+		"driver_deleted": "Driver was deleted",
+		"bid_auction": "Bid success"
 	}
 }
