-nova server chyb (shipment not found)

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -207,7 +207,8 @@
 			"26": "Musíte souhlasit s podmínkami",
 			"27": "Tento uživatel má ban",
 			"28": "Tento uživatel není schválený",
-			"29": "Tento uživatel je smazaný"
+			"29": "Tento uživatel je smazaný",
+			"30": "Tato jízda neexistuje"
 		}
 	},
 	"warnings": {
