-zobrazeni cele adresy, -pri registraci aukce se zadava cela adresa jako jedna vec

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -37,6 +37,7 @@
 		"ico" : "IČO",
 		"dic" : "DIČ",
 		"bank_account" : "Bankovní účet",
+		"address" : "Adresa",
 		"address_city" : "Město",
 		"address_street" : "Ulice",
 		"address_house_number" : "Číslo popisné",
