-prava hlavicka se nezobrazovala u my_profile -uprava lokalizací

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -19,7 +19,7 @@
 		"assign": "Přiřadit",
 		"login_to_system": "Přihlášení do systému",
 		"registration": "Registrace",
-		"registration_employee": "Registrace zaměstnance",
+		"registration_employee": "Registrace",
 		"forgot_password": "Zapomenuté heslo",
 		"logout": "Odhlásit se",
 		"about": "O nás",
@@ -44,7 +44,7 @@
 		"psc" : "Poštovní číslo",
 		"phone_number" : "Telefoní číslo",
 		"email" : "Email",
-		"registration_user": "Registrace zaměstnance",
+		"registration_user": "Registrace",
 		"driver": "Řidič",
 		"drivers": "Řidiči",
 		"dispatcher": "Dispečer",
