--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -3,7 +3,7 @@
 		"login": "Login",
 		"username": "Username",
 		"name": "Name",
-		"surname": "Username",
+		"surname": "Surname",
 		"password": "Password",
 		"date": "Date",
 		"amount": "Amount",
@@ -19,7 +19,7 @@
 		"assign": "Assign",
 		"login_to_system": "Login to system",
 		"registration": "Registration",
-		"registration_employee": "Registration employee",
+		"registration_employee": "Registration",
 		"forgot_password": "Forgot password",
 		"logout": "Logout",
 		"about": "About",
@@ -44,13 +44,13 @@
 		"psc" : "ZIP",
 		"phone_number" : "Phone number",
 		"email" : "Email",
-		"registration_user": "Registration user",
+		"registration_user": "Registration",
 		"driver": "Driver",
 		"drivers": "Drivers",
 		"dispatcher": "Dispatcher",
 		"dispatchers": "Dispatchers",
 		"show_hidden_map": "Show/Hide Map",
-		"forgot_password_text": "Send new password to your email and you can your profile.",
+		"forgot_password_text": "Send new password to your email and you can change it in your profile.",
 		"send_password": "Send password",
 		"your_acc": "Your account",
 		"actual_password": "Actual password",
