-uprava loc. hlasek

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -9,7 +9,7 @@
 		"amount": "Příhoz",
 		"driver_licence": "Řidičský průkaz",
 		"no_amounts": "Žádné příhozy",
-		"accept_conditions": "Souhlasím s podmínkama",
+		"accept_conditions": "Souhlasím s podmínkami",
 		"bid": "Přihodit",
 		"want_bid": "Chcete přihodit?",
 		"auction_complete": "Konec aukce",
@@ -25,9 +25,7 @@
 		"about": "O nás",
 		"contact": "Kontakt",
 		"main_page": "Hlavní stránka",
-		"about_company": "O firmě",
 		"detail": "Detail",
-		"footer_text": "Vytvořilo grafické studio BOXART -> Leda hovno -> to já Merynátor.",
 		"transporter": "Přepravce",
 		"sender": "Odesílatel",
 		"confirmPassword": "Potvrzení hesla",
@@ -35,14 +33,13 @@
         "credit": "Kredit",
         "share": "podíl",
 		"ico" : "IČO",
-		"dic" : "DIČ",
 		"bank_account" : "Bankovní účet",
 		"address" : "Adresa",
 		"address_city" : "Město",
 		"address_street" : "Ulice",
 		"address_house_number" : "Číslo popisné",
 		"psc" : "Poštovní číslo",
-		"phone_number" : "Telefoní číslo",
+		"phone_number" : "Telefonní číslo",
 		"email" : "Email",
 		"registration_user": "Registrace",
 		"driver": "Řidič",
@@ -50,7 +47,7 @@
 		"dispatcher": "Dispečer",
 		"dispatchers": "Dispečeři",
 		"show_hidden_map": "Zobrazit/Skrýt Mapu",
-		"forgot_password_text": "Na zadaný email vám pošleme heslo, kterým se přihlásíte a poté si můžete změnit heslo na vašem profilu.",
+		"forgot_password_text": "Na zadaný email vám zašleme nové heslo, kterým se přihlásíte do systému a můžete si ho změnit na vašem profilu.",
 		"send_password": "Poslat heslo",
 		"your_acc": "Váš účet",
 		"actual_password": "Aktuální heslo",
@@ -62,7 +59,6 @@
 		"freight": "Náklad",
 		"my_shipment": "Moje zásilky",
 		"shipment_manage": "Správce zásilek",
-		"auction_for_assign": "Aukce na přiřazení",
 		"about_freight": "O zásilce",
 		"more": "Více",
 		"add_driver": "Přidat řidiče",
@@ -89,17 +85,15 @@
 			"about_driver": "O řidiči",
 			"driver_name": "Jméno",
 			"driver_surname": "Příjmení",
-			"driver_licence": "Řidičák",
-			"driver_phone_number": "Telefon",
+			"driver_phone_number": "Telefonní číslo",
 			"stopShipment": "Předčasně ukončit",
 			"photos": "Fotografie",
 			"photos_before": "Před",
 			"photos_after": "Po",
 			"no_photos": "Žádné fotky",
 			"map": "Mapa jízdy",
-			"show_map": "Zobraz mapu jízdy",
-			"hide_map": "Skrýt mapu jízdy",
-			"open_invoice": "Otevřít fakturu"
+			"show_map": "Zobrazit mapu jízdy",
+			"hide_map": "Skrýt mapu jízdy"
 		},
 		"tab": {
 			"auction": "Aukce",
@@ -167,7 +161,7 @@
 		"wrong_address": "Špatně zadaná adresa",
 		"wrong_address_city": "Špatně zadané město v adrese",
 		"wrong_address_street": "Špatně zadaná ulice v adrese",
-		"invalid_auction_date": "Datum ukončení aukce musí být vetší jak aktuální datum",
+		"invalid_auction_date": "Datum ukončení aukce musí být větší jak aktuální datum",
 		"auction_created": "Aukce nebyla založena, zkontrolujte formulář",
 		"set_required_inputs": "Vyplňte všechny povinné položky",
 		"auction_history": "Načítání historie se nezdařilo",
