--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -130,18 +130,17 @@
 			"unload": "Unload",
 			"unload_note": "Note for freight unload",
 			"freight_description": "Freight description",
-			"freight_type": {
-				"label": "Freight type",
-				"1": "Chemical liquids",
-				"2": "Sweet",
-				"3": "Fuels and oils",
-				"4": "Gases in special equipment",
-				"5": "Zboží citlivé povahy",
-				"6": "Goods of a sensitive nature",
-				"7": "Food and fodder",
-				"8": "Art objects",
-				"9": "Furniture"
-			},
+            "freight_type": {
+              "label": "Freight type",
+              "1": "Package up to 50 kg",
+              "2": "Package over 50 kg",
+              "3": "Atypical package",
+              "4": "Eur pallet",
+              "5": "Atypical pallet",
+              "6": "Chemical substances, dangerous substances, combustibles",
+              "7": "Bulk material",
+              "8": "Other"
+            },
 			"freight_size": "Freight size (words)",
 			"freight_weight": "Freight weight in kg",
 			"email_addressee": "Email addressee",
