-registrace drivera ořezaná -info hláška pri vytváření aukce

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -113,6 +113,7 @@
             "users": "Uživatelé"
 		},
 		"auction": {
+			"info": "Pro zadávání adresy používejte našeptávač, tím zajistíte její správnost. Správnost adresy si lze vyzkoušet zobrazením mapy.",
 			"auction_list": "Aukce",
 			"bids_auction": "Aukce na které přihazuji",
 			"created_auction": "Vytvořené aukce",
