-lokalizace titelů u dovolené ridiče

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -65,6 +65,9 @@
 		"company": "Moje firma",
 		"win_auction": "Vyhrané aukce",
 		"vacation": "Dovolená",
+		"add_vacation": "Přidat vybranou dovolenou",
+		"delete_vacation": "Smazat vybranou dovolenou",
+		"delete_driver": "Smazat řidiče",
         "admin": "Administrace",
         "users": "Uživatelé",
 		"no_drivers": "Žádní řidiči",
