--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -65,6 +65,9 @@
 		"company": "My company",
 		"win_auction": "Win auction",
 		"vacation": "Vacation",
+		"add_vacation": "Add selected vacation",
+		"delete_vacation": "Delete selected vacation",
+		"delete_driver": "Delete driver",
         "admin": "Admin",
         "users": "Users",
 		"no_drivers": "No drivers",
